--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,185 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Alice&family=Inter:wght@200;300;400;500;600;700;800;900&display=swap');
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+* {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+  background: #ffffff;
+}
+
+.container {
+  width: 100%;
   min-height: 100vh;
+
+  background-image: linear-gradient(93deg, rgba(255, 255, 255, 0.21) 35.02%, rgba(249, 253, 250, 0.20) 36.38%, rgba(223, 244, 230, 0.18) 41.97%, rgba(15, 170, 70, 0.00) 87.43%);
+  /* background-image: linear-gradient(rgb(9, 0, 77, 0.65), rgba(9, 0, 77, 0.65)); */
+  background-size: cover;
+  background-position: center;
+  padding: 10px 8%;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+nav {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 0;
+
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.logo {
+  width: 180px;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+nav ul {
+  list-style: none;
+  width: 100%;
+  text-align: right;
+  /* padding-right: 60px; */
+}
+
+nav ul li {
+  display: inline-block;
+  margin: 10px 20px;
+}
+
+nav ul li a {
+  color: #000000;
+  text-decoration: none;
+  color: #000;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+nav li a:hover {
+  color: #00AA45 !important;
+  transition: 0.3s;
+}
+
+/* nav li a.active {
+  background-color: #eee;
+  color: #b20000;
+  padding: 20px 20px;
+  border-radius: 10px;
+} */
+
+.btn {
+  display: flex;
+  align-items: center;
+  padding: 12px 21px;
+  border: 0;
+  outline: 0;
+  border-radius: 6px;
+  background: #00AA45;
+  color: #ffffff;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.btn_sec {
+  display: flex;
+  align-items: center;
+  padding: 23px 40px;
+  border: 0;
+  outline: 0;
+  border-radius: 0px 6px 6px 0px;
+  background: #000000;
+  color: #ffffff;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+
+
+.btn img {
+  width: 20px;
+  margin-right: 10px;
+}
+
+.content {
+  margin-top: 8%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #000000;
+  /* max-width: 620px; */
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* color: white; */
+}
+
+.content_span {
+  color: #01A944;
+  font-family: Alice;
+}
+
+.content_para {
+  color: #000;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.content_alice {
+  color: #000;
+  font-family: Alice;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding-top: 20px;
+}
+
+.content h1 {
+  color: #000000;
+  font-family: Alice;
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.content form {
+  display: flex;
+  align-items: center;
+  /* background: #ffffff; */
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 30px;
+
+}
+
+input[type=text] {
+  border: 1px solid rgb(228, 228, 228) !important;
+  padding: 20px;
+  border-radius: 12px 0px 0px 12px;
+}
+
+.content form input {
+  border: 0;
+  outline: 0;
+  width: 100%;
+  font-size: 16px;
+  padding-left: 10px;
+  /* border-color: 1px solid red; */
+}
+
+.content form .btn {
+  font-size: 15px;
+  padding: 10px 30px;
 }
